@@ -22,6 +22,7 @@ import com.liferay.portal.kernel.upload.UploadException;
 import com.liferay.portal.kernel.upload.UploadServletRequest;
 import com.liferay.portal.kernel.util.ArrayUtil;
 import com.liferay.portal.kernel.util.FileUtil;
+import com.liferay.portal.kernel.util.ProgressTracker;
 import com.liferay.portal.kernel.util.PropsKeys;
 import com.liferay.portal.kernel.util.StringBundler;
 import com.liferay.portal.kernel.util.SystemProperties;
@@ -46,6 +47,7 @@ import java.util.Set;
 import javax.servlet.ServletInputStream;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletRequestWrapper;
+import javax.servlet.http.HttpSession;
 
 import org.apache.commons.fileupload.FileUploadBase;
 import org.apache.commons.fileupload.servlet.ServletFileUpload;
@@ -77,21 +79,29 @@ public class UploadServletRequestImpl
 	public UploadServletRequestImpl(HttpServletRequest request) {
 		super(request);
 
-		_fileParameters = new LinkedHashMap<String, FileItem[]>();
-		_regularParameters = new LinkedHashMap<String, List<String>>();
+		_fileParameters = new LinkedHashMap<>();
+		_regularParameters = new LinkedHashMap<>();
+
+		LiferayServletRequest liferayServletRequest = null;
 
 		try {
-			ServletFileUpload servletFileUpload = new LiferayFileUpload(
-				new LiferayFileItemFactory(getTempDir()), request);
+			HttpSession session = request.getSession();
+
+			session.removeAttribute(ProgressTracker.PERCENT);
+
+			ServletFileUpload servletFileUpload = new ServletFileUpload(
+				new LiferayFileItemFactory(getTempDir()));
 
 			servletFileUpload.setSizeMax(
 				PrefsPropsUtil.getLong(
 					PropsKeys.UPLOAD_SERVLET_REQUEST_IMPL_MAX_SIZE));
 
-			_liferayServletRequest = new LiferayServletRequest(request);
+			liferayServletRequest = new LiferayServletRequest(request);
 
 			List<org.apache.commons.fileupload.FileItem> fileItems =
-				servletFileUpload.parseRequest(_liferayServletRequest);
+				servletFileUpload.parseRequest(liferayServletRequest);
+
+			liferayServletRequest.setFinishedReadingOriginalStream(true);
 
 			for (org.apache.commons.fileupload.FileItem fileItem : fileItems) {
 				LiferayFileItem liferayFileItem = (LiferayFileItem)fileItem;
@@ -174,6 +184,8 @@ public class UploadServletRequestImpl
 				_log.debug(e, e);
 			}
 		}
+
+		_liferayServletRequest = liferayServletRequest;
 	}
 
 	public UploadServletRequestImpl(
@@ -182,8 +194,8 @@ public class UploadServletRequestImpl
 
 		super(request);
 
-		_fileParameters = new LinkedHashMap<String, FileItem[]>();
-		_regularParameters = new LinkedHashMap<String, List<String>>();
+		_fileParameters = new LinkedHashMap<>();
+		_regularParameters = new LinkedHashMap<>();
 
 		if (fileParams != null) {
 			_fileParameters.putAll(fileParams);
@@ -192,6 +204,8 @@ public class UploadServletRequestImpl
 		if (regularParams != null) {
 			_regularParameters.putAll(regularParams);
 		}
+
+		_liferayServletRequest = null;
 	}
 
 	@Override
@@ -203,6 +217,8 @@ public class UploadServletRequestImpl
 				}
 			}
 		}
+
+		_liferayServletRequest.cleanUp();
 	}
 
 	@Override
@@ -422,14 +438,18 @@ public class UploadServletRequestImpl
 
 	@Override
 	public Map<String, String[]> getParameterMap() {
-		Map<String, String[]> map = new HashMap<String, String[]>();
+		Map<String, String[]> map = new HashMap<>();
 
 		Enumeration<String> enu = getParameterNames();
 
 		while (enu.hasMoreElements()) {
 			String name = enu.nextElement();
 
-			map.put(name, getParameterValues(name));
+			String[] values = getParameterValues(name);
+
+			if (values != null) {
+				map.put(name, values);
+			}
 		}
 
 		return map;
@@ -437,7 +457,7 @@ public class UploadServletRequestImpl
 
 	@Override
 	public Enumeration<String> getParameterNames() {
-		Set<String> parameterNames = new LinkedHashSet<String>();
+		Set<String> parameterNames = new LinkedHashSet<>();
 
 		Enumeration<String> enu = super.getParameterNames();
 
@@ -485,7 +505,7 @@ public class UploadServletRequestImpl
 		if (ArrayUtil.isNotEmpty(liferayFileItems)) {
 			FileItem liferayFileItem = liferayFileItems[0];
 
-			return new Long(liferayFileItem.getSize());
+			return Long.valueOf(liferayFileItem.getSize());
 		}
 
 		return null;
@@ -498,7 +518,7 @@ public class UploadServletRequestImpl
 		if (ArrayUtil.isNotEmpty(liferayFileItems)) {
 			FileItem liferayFileItem = liferayFileItems[0];
 
-			return new Boolean(liferayFileItem.isFormField());
+			return liferayFileItem.isFormField();
 		}
 
 		return null;
@@ -522,13 +542,13 @@ public class UploadServletRequestImpl
 		return inputStream;
 	}
 
-	private static Log _log = LogFactoryUtil.getLog(
+	private static final Log _log = LogFactoryUtil.getLog(
 		UploadServletRequestImpl.class);
 
 	private static File _tempDir;
 
-	private Map<String, FileItem[]> _fileParameters;
-	private LiferayServletRequest _liferayServletRequest;
-	private Map<String, List<String>> _regularParameters;
+	private final Map<String, FileItem[]> _fileParameters;
+	private final LiferayServletRequest _liferayServletRequest;
+	private final Map<String, List<String>> _regularParameters;
 
 }
