@@ -16,7 +16,6 @@ package com.liferay.portal.util;
 
 import com.liferay.portal.events.EventsProcessorUtil;
 import com.liferay.portal.kernel.dao.jdbc.DataAccess;
-import com.liferay.portal.kernel.dao.shard.ShardUtil;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
 import com.liferay.portal.kernel.search.SearchEngineUtil;
@@ -35,13 +34,14 @@ import com.liferay.portal.model.User;
 import com.liferay.portal.model.VirtualHost;
 import com.liferay.portal.security.auth.CompanyThreadLocal;
 import com.liferay.portal.security.auth.PrincipalThreadLocal;
+import com.liferay.portal.security.exportimport.UserImporterUtil;
+import com.liferay.portal.security.ldap.LDAPSettingsUtil;
 import com.liferay.portal.service.CompanyLocalServiceUtil;
 import com.liferay.portal.service.GroupLocalServiceUtil;
 import com.liferay.portal.service.LayoutSetLocalServiceUtil;
 import com.liferay.portal.service.PortletLocalServiceUtil;
 import com.liferay.portal.service.UserLocalServiceUtil;
 import com.liferay.portal.service.VirtualHostLocalServiceUtil;
-import com.liferay.portlet.journal.service.JournalContentSearchLocalServiceUtil;
 
 import java.sql.Connection;
 import java.sql.PreparedStatement;
@@ -209,7 +209,7 @@ public class PortalInstances {
 			_log.debug("Set company id " + companyId);
 		}
 
-		request.setAttribute(WebKeys.COMPANY_ID, new Long(companyId));
+		request.setAttribute(WebKeys.COMPANY_ID, Long.valueOf(companyId));
 
 		CompanyThreadLocal.setCompanyId(companyId);
 
@@ -256,17 +256,8 @@ public class PortalInstances {
 			}
 
 			if (virtualHost.getLayoutSetId() != 0) {
-				LayoutSet layoutSet = null;
-
-				try {
-					ShardUtil.pushCompanyService(virtualHost.getCompanyId());
-
-					layoutSet = LayoutSetLocalServiceUtil.getLayoutSet(
-						virtualHost.getLayoutSetId());
-				}
-				finally {
-					ShardUtil.popCompanyService();
-				}
+				LayoutSet layoutSet = LayoutSetLocalServiceUtil.getLayoutSet(
+					virtualHost.getLayoutSetId());
 
 				if (_log.isDebugEnabled()) {
 					_log.debug(
@@ -293,14 +284,7 @@ public class PortalInstances {
 	}
 
 	private long[] _getCompanyIdsBySQL() throws SQLException {
-		List<Long> companyIds = new ArrayList<Long>();
-
-		String currentShardName = ShardUtil.setTargetSource(
-			PropsValues.SHARD_DEFAULT_NAME);
-
-		if (Validator.isNotNull(currentShardName)) {
-			ShardUtil.pushCompanyService(PropsValues.SHARD_DEFAULT_NAME);
-		}
+		List<Long> companyIds = new ArrayList<>();
 
 		Connection con = null;
 		PreparedStatement ps = null;
@@ -311,13 +295,6 @@ public class PortalInstances {
 
 			ps = con.prepareStatement(_GET_COMPANY_IDS);
 
-			if (Validator.isNotNull(currentShardName)) {
-				ps.setString(1, currentShardName);
-			}
-			else {
-				ps.setString(1, PropsValues.SHARD_DEFAULT_NAME);
-			}
-
 			rs = ps.executeQuery();
 
 			while (rs.next()) {
@@ -327,12 +304,6 @@ public class PortalInstances {
 			}
 		}
 		finally {
-			if (Validator.isNotNull(currentShardName)) {
-				ShardUtil.popCompanyService();
-
-				ShardUtil.setTargetSource(currentShardName);
-			}
-
 			DataAccess.cleanUp(con, ps, rs);
 		}
 
@@ -357,7 +328,7 @@ public class PortalInstances {
 			List<Company> companies = CompanyLocalServiceUtil.getCompanies(
 				false);
 
-			List<String> webIdsList = new ArrayList<String>(companies.size());
+			List<String> webIdsList = new ArrayList<>(companies.size());
 
 			for (Company company : companies) {
 				String webId = company.getWebId();
@@ -465,23 +436,15 @@ public class PortalInstances {
 				_log.error(e, e);
 			}
 
-			// Check journal content search
+			// LDAP import
 
-			if (_log.isDebugEnabled()) {
-				_log.debug("Check journal content search");
+			try {
+				if (LDAPSettingsUtil.isImportOnStartup(companyId)) {
+					UserImporterUtil.importUsers(companyId);
+				}
 			}
-
-			if (GetterUtil.getBoolean(
-					PropsUtil.get(
-						PropsKeys.JOURNAL_SYNC_CONTENT_SEARCH_ON_STARTUP))) {
-
-				try {
-					JournalContentSearchLocalServiceUtil.checkContentSearches(
-						companyId);
-				}
-				catch (Exception e) {
-					_log.error(e, e);
-				}
+			catch (Exception e) {
+				_log.error(e, e);
 			}
 
 			// Process application startup events
@@ -574,18 +537,18 @@ public class PortalInstances {
 	}
 
 	private static final String _GET_COMPANY_IDS =
-		"select companyId from Company, Shard where Company.companyId = " +
-			"Shard.classPK and Shard.name = ?";
+		"select companyId from Company";
 
-	private static Log _log = LogFactoryUtil.getLog(PortalInstances.class);
+	private static final Log _log = LogFactoryUtil.getLog(
+		PortalInstances.class);
 
-	private static PortalInstances _instance = new PortalInstances();
+	private static final PortalInstances _instance = new PortalInstances();
 
-	private Set<String> _autoLoginIgnoreHosts;
-	private Set<String> _autoLoginIgnorePaths;
+	private final Set<String> _autoLoginIgnoreHosts;
+	private final Set<String> _autoLoginIgnorePaths;
 	private long[] _companyIds;
-	private Set<String> _virtualHostsIgnoreHosts;
-	private Set<String> _virtualHostsIgnorePaths;
+	private final Set<String> _virtualHostsIgnoreHosts;
+	private final Set<String> _virtualHostsIgnorePaths;
 	private String[] _webIds;
 
 }
